First impressions on electron

--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@ on <a href="https://twitter.com/xdbsoft">Twitter</a>.</p>
             <div class="col-xs-12 posts-list">
                 
                     <article>
+                        <h2><a href="http://www.xdbsoft.com/blog/electron/">First impressions on Electron</a></h2>
+                        <div class=sub-header>
+                          August 2017 · 2 minute read
+                        </div>
+                    </article>
+                
+                    <article>
                         <h2><a href="http://www.xdbsoft.com/blog/start/">Let&#39;s start</a></h2>
                         <div class=sub-header>
                           August 2017 · 1 minute read
